<resources>

    <string name="app_name">设备信息</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">设置</string>
    <string name="title_activity_main">设备信息</string>
    <string name="sensor">传感器</string>
    <string name="camera">摄像头</string>
    <string name="other">其他</string>
    <string name="multi_sim">多卡手机</string>
    <string name="network">网络相关</string>
    <string name="abount">关于</string>
    <string name="json">JSON</string>

</resources>