<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera" />

        <Button
            android:id="@+id/btn_multi_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_sim" />

        <Button
            android:id="@+id/btn_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network" />

        <Button
            android:id="@+id/btn_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_abount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abount" />
    </LinearLayout>

</LinearLayout>